--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
 html {
   position: relative;
   overflow-x: hidden;
-  font-size: 10px;
+  font-size: 14px;
   margin: 0;
   height: 100%;
 }
@@ -23,7 +23,6 @@ body {
   position: relative;
   font-family: "Poppins", sans-serif !important;
   overflow-x: hidden;
-
 }
 
 body {
@@ -31,37 +30,15 @@ body {
   background: #ffffff;
 }
 
-.pagination-separated {
-  .page-item {
-  font-size: larger;
-    .page-link {
-      margin-left: 0.35rem;
-     
-    }
-  }
+.button {
+  background-color: black;
+  color: #ffffff;
+  border-radius: 10%;
+  padding: 2px 6px 2px 6px;
+  cursor: pointer;
 }
 
-
-.pagination-rounded {
-  .page-link {
-    border-radius: 30px !important;
-    margin: 0 3px !important;
-    border: none;
-    min-width: 32px;
-    min-height: 32px;
-    text-align: center;
-  }
-
-  &.pagination-sm {
-    .page-link {
-      min-width: 25px;
-      min-height: 25px;
-    }
-  }
-}
-
-.page-item.active {
-  .page-link {
-    box-shadow: black;
-  }
+.button:hover {
+  background-color: #ccddf3;
+  color: black;
 }
