--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,8 +33,8 @@ body {
 .button {
   background-color: black;
   color: #ffffff;
-  border-radius: 10%;
-  padding: 2px 6px 2px 6px;
+  border-radius: 5px;
+  padding: 3px 10px 3px 10px;
   cursor: pointer;
 }
 
