--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,13 +21,16 @@ html {
 }
 body {
   position: relative;
-  font-family: "Poppins", sans-serif !important;
+  font-family: 'Poppins', sans-serif !important;
+  color: black;
   overflow-x: hidden;
 }
 
 body {
-  color: black;
-  background: #ffffff;
+  background-color: #f4f7fc;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .button {
@@ -50,6 +53,136 @@ body {
   margin-right: auto;
   margin-left: auto;
 }
+
+.admin-layout {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.admin-main {
+  display: flex;
+  flex: 1;
+  height: calc(100vh - 80px);
+}
+
+.admin-content {
+  flex: 1;
+  padding: 1rem;
+  overflow-y: auto;
+}
+
+.admin-header {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+  left: 240px;
+}
+
+.admin-sidebar {
+  background-color: #2c3e50;
+  color: white;
+  width: 240px;
+  padding: 1rem;
+  transition: width 0.4s ease;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+}
+
+.admin-sidebar.collapsed {
+  width: 80px;
+}
+
+.admin-sidebar ul {
+  list-style: none;
+  padding: 0;
+}
+
+.admin-sidebar li {
+  margin: 1rem 0;
+}
+
+.admin-sidebar a {
+  display: flex;
+  align-items: center;
+  color: white;
+  text-decoration: none;
+}
+
+.admin-sidebar a:hover {
+  color: #ff6b6b;
+}
+
+.sidebar-icon {
+  font-size: 1.5rem;
+  margin-right: 10px;
+}
+
+.sidebar-text {
+  font-size: 1rem;
+}
+
+.admin-footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+}
+
+.admin-footer p {
+  margin: 0;
+}
+
+.collapse-btn {
+  background-color: #2c3e50;
+  color: #fff;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  margin-bottom: 1rem;
+  display: block;
+  margin-left: auto;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .admin-sidebar {
+    width: 100%;
+    order: -1; /* Move sidebar below header */
+  }
+
+  .admin-sidebar.collapsed {
+    width: 100%;
+  }
+
+  .admin-sidebar ul {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .admin-sidebar a {
+    padding: 0.5rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .sidebar-icon {
+    font-size: 1.2rem;
+  }
+
+  .sidebar-text {
+    display: none; /* Hide text on very small screens */
+  }
+
+  .admin-sidebar.collapsed .sidebar-text {
+    display: none;
+  }
+}
+
+/* responsive container */
 
 @media (min-width: 576px) {
   .container {
