--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,6 +64,13 @@ body {
   display: flex;
   flex: 1;
   height: calc(100vh - 80px);
+  position: relative;
+  left: 240px !important;
+  transition: left 0.4s ease;
+}
+
+.admin-main.collapsed {
+  left: 80px !important;
 }
 
 .admin-content {
@@ -73,11 +80,21 @@ body {
 }
 
 .admin-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
   background-color: #333;
   color: white;
   text-align: center;
-  padding: 1rem;
-  left: 240px;
+  padding: 1rem 20vh 1rem 20vh;
+  position: relative;
+  left: 240px !important;
+  transition: left 0.4s ease;
+}
+
+.admin-header.collapsed {
+  left: 80px !important;
 }
 
 .admin-sidebar {
@@ -126,10 +143,20 @@ body {
 }
 
 .admin-footer {
+  display: flex;
+  align-items: center;
+  justify-content: start;
   background-color: #333;
   color: white;
   text-align: center;
   padding: 1rem;
+  position: relative;
+  left: 240px !important;
+  transition: left 0.4s ease;
+}
+
+.admin-footer.collapsed {
+  left: 80px !important;
 }
 
 .admin-footer p {
@@ -148,10 +175,10 @@ body {
 }
 
 /* Responsive Design */
-@media (max-width: 768px) {
+@media (max-width: 368px) {
   .admin-sidebar {
     width: 100%;
-    order: -1; /* Move sidebar below header */
+    order: -1;
   }
 
   .admin-sidebar.collapsed {
