--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@ html {
 }
 body {
   position: relative;
-  font-family: 'Poppins', sans-serif !important;
+  font-family: "Poppins", sans-serif !important;
   color: black;
   overflow-x: hidden;
 }
