--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,15 +64,22 @@ body {
   display: flex;
   flex: 1;
   top: 5%;
-  right: 20%;
+  right: 15%;
   bottom: 5%;
-  left: 20%;
+  left: 15%;
+  width: calc(100% - 15%);
+  height: calc(100% - 10%);
   position: relative;
   transition: left 0.4s ease;
 }
 
 .admin-main.collapsed {
+  top: 5%;
+  right: 5%;
+  bottom: 5%;
   left: 5%;
+  width: calc(100% - 5%);
+  height: calc(100% - 10%);
 }
 
 .admin-content {
@@ -86,22 +93,22 @@ body {
   align-items: center;
   justify-content: space-between;
   background-color: #333;
-  padding: 1% 21% 1% 1%;
+  padding: 1% 16.5% 1% 1%;
   color: white;
   position: relative;
-  left: 20%;
+  left: 15%;
   transition: left 0.4s ease;
 }
 
 .admin-header.collapsed {
   left: 5%;
-  padding: 1% 6% 1% 1%;
+  padding: 1% 6.5% 1% 1%;
 }
 
 .admin-sidebar {
   background-color: #2c3e50;
   color: white;
-  width: 20%;
+  width: 15%;
   padding: 1rem;
   transition: width 0.4s ease;
   height: 100vh;
@@ -152,7 +159,7 @@ body {
   text-align: center;
   padding: 1% 21% 1% 1%;
   position: relative;
-  left: 20%;
+  left: 15%;
   transition: left 0.4s ease;
 }
 
@@ -174,7 +181,7 @@ body {
 }
 
 /* Responsive Design */
-@media (max-width: 368px) {
+@media (max-width: 343px) {
   .admin-sidebar {
     width: 100%;
     order: -1;
