category , subcategory table created and category modal created

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,7 +99,7 @@ body {
   color: white;
   position: fixed;
   top: 0;
-  z-index: 1000;
+  /* z-index: 1000; */
   width: 100%;
   left: 15%;
   transition: left 0.4s ease;
