--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -185,6 +185,28 @@ body {
   cursor: pointer;
 }
 
+.dropdown-wrapper {
+  position: relative;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+}
+
+.dropdown-menu.show {
+  display: block;
+}
+
+.dropdown-menu .capitalize:hover {
+  background-color: #f5f5f5;
+  cursor: pointer;
+  width: 80%;
+}
+
 /* Responsive Design */
 @media (max-width: 343px) {
   .admin-sidebar {
