--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
+/* nprogress.css */
+@import 'nprogress/nprogress.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -225,6 +228,24 @@ h6 {
 .bg-secondary {
   --tw-bg-opacity: 1;
   background-color: black !important;
+}
+
+/* wordpress blog css */
+.custom-blog-content ul > li::marker {
+  color: black !important;
+}
+
+.custom-blog-content a {
+  color: #2563eb !important;
+  text-decoration: underline;
+}
+
+.custom-blog-content table > thead > tr > th {
+  padding: 12px !important;
+}
+
+.custom-blog-content table > tbody > tr > td {
+  padding: 12px !important;
 }
 
 @keyframes fade-in {
