--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,3 @@
-/* nprogress.css */
 @import 'nprogress/nprogress.css';
 
 @tailwind base;
@@ -25,8 +24,8 @@ html {
 
 body {
   position: relative;
-  font-family: 'Inter', sans-serif;
-  font-weight: 500;
+  font-family: 'Plus_Jakarta_Sans', sans-serif;
+  font-weight: 700;
   color: #333;
   overflow-x: hidden;
   background-color: #f9fafb;
@@ -42,9 +41,16 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Plus_Jakarta_Sans', sans-serif;
   font-weight: 700;
   color: #111;
+}
+
+p {
+  font-family: 'Plus_Jakarta_Sans', sans-serif;
+  font-weight: 400;
+  color: #333;
+  line-height: 1.6;
 }
 
 .end-3 {
